// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Proposals/Header Author Loading smoke-test 1`] = `
<div class="grow overflow-hidden border-b border-accent-content bg-base-200 pb-4 pt-2 text-xs text-neutral-content">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="mb-2 text-lg text-base-content">
        short title
      </div>
      <div class="pt-1">
        <div class="mr-3 inline align-middle">
          <div tabindex="0"
               role="button"
               class="btn btn-sm align-middle cursor-default"
          >
            Open
          </div>
        </div>
        <div class="mr-3 inline align-middle">
          opened 3 months ago
        </div>
        <div class="inline align-middle">
          <div class="skeleton inline-block h-3 w-20 pb-2">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Proposals/Header Long Details smoke-test 1`] = `
<div class="grow overflow-hidden border-b border-accent-content bg-base-200 pb-4 pt-2 text-xs text-neutral-content">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="mb-2 text-lg text-base-content">
        rather long title that goes on and on and on and on and on and on...
      </div>
      <div class="pt-1">
        <div class="mr-3 inline align-middle">
          <div tabindex="0"
               role="button"
               class="btn btn-sm align-middle cursor-default"
          >
            Open
          </div>
        </div>
        <div class="mr-3 inline align-middle">
          opened a minute ago
        </div>
        <div class="inline align-middle">
          DanConwayDev
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Proposals/Header Long and No Spaces smoke-test 1`] = `
<div class="grow overflow-hidden border-b border-accent-content bg-base-200 pb-4 pt-2 text-xs text-neutral-content">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="mb-2 text-lg text-base-content">
        LongNameLongNameLongNameLongNameLongNameLongNameLongNameLongNameL...
      </div>
      <div class="pt-1">
        <div class="mr-3 inline align-middle">
          <div tabindex="0"
               role="button"
               class="btn btn-sm align-middle cursor-default"
          >
            Open
          </div>
        </div>
        <div class="mr-3 inline align-middle">
          opened 3 months ago
        </div>
        <div class="inline align-middle">
          DanConwayDev
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Proposals/Header Short Details smoke-test 1`] = `
<div class="grow overflow-hidden border-b border-accent-content bg-base-200 pb-4 pt-2 text-xs text-neutral-content">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="mb-2 text-lg text-base-content">
        short title
      </div>
      <div class="pt-1">
        <div class="mr-3 inline align-middle">
          <div tabindex="0"
               role="button"
               class="btn btn-sm align-middle cursor-default"
          >
            Open
          </div>
        </div>
        <div class="mr-3 inline align-middle">
          opened 7 days ago
        </div>
        <div class="inline align-middle">
          DanConwayDev
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Proposals/Header loading smoke-test 1`] = `
<div class="grow overflow-hidden border-b border-accent-content bg-base-200 pb-4 pt-2 text-xs text-neutral-content">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div>
        <div class="skeleton h-7 w-60 pt-1">
        </div>
        <div class>
          <div class="skeleton mt-3 inline-block h-8 w-20 align-middle">
          </div>
          <div class="skeleton ml-3 mt-5 inline-block h-3 w-28 align-middle">
          </div>
          <div class="skeleton ml-3 mt-5 inline-block h-3 w-28 align-middle">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
